hice que mods y mods_es fuera responsivo, basado en flexbox

--- a/mods.html
+++ b/mods.html
@@ -37,14 +37,14 @@
 			<!--article style="background:var(--section_color);"-->
 				<h2>Rocketed</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
-							<img src="images/Rocketed_title.png" class="imagen">
-						</td>
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
+						<img src="images/Rocketed_title.png" class="imagen">
+					</div>
 
-						<td>
-							<div class="article_content_background"><div class="article_content">
+					<div class="flexbox-box-article-right">
+						<div class="article_content_background">
+							<div class="article_content">
 							<p>Rocketed is a three map singleplayer wad for limit removing sourceports, where the player's main weapon is the Rocket Launcher! 
 								Blow the demons up, and beware of rocketing at your own face!</p>
 				
@@ -70,23 +70,22 @@
 								<p class="center">
 									<a href="https://www.doomworld.com/forum/topic/132933-rocketed-3-rocket-launcher-only-maps-for-doom-2/">Go to its doomworld thread</a>
 								</p>
-							</div></div>
-								<br>
-						</td>
-					</tr>
-				</table>
+							</div>
+						</div>
+						<br>
+					</div>
+				</div>
 			</article>
 			<article class="article_mods_dimweird">
 			<!--article style="background:var(--section_color);"-->
 				<h2>Dimensional Weirdness</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
 							<img src="https://img.itch.zone/aW1hZ2UvNzI4MTMwLzQwNDM5OTkucG5n/original/A8j%2FBs.png" class="imagen">
-						</td>
+					</div>
 
-						<td>
+					<div class="flexbox-box-article-right">
 							<div class="article_content_background"><div class="article_content">
 							<p>You just infiltrated an enemy base to find out where so many demons came from, and you discover a portal. 
 								You decided to enter the portal and it took you to a surprising place: 
@@ -119,23 +118,21 @@
 								</p>
 							</div></div>
 								<br>
-						</td>
-					</tr>
-				</table>
+					</div>
+				</div>
 			</article>
 
 			<article class="article_mods_furdemon">
 				<h2>FURDEMON</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
 							<div class="youtube-video-container">
 								<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/kRN8CzcrLwg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
-						</td>
+					</div>
 
-						<td>
+					<div class="flexbox-box-article-right">
 							<div class="article_content_background"><div class="article_content">
 							<p>A new demon base was installed on earth, and you must steal the invasion data to counter the attacks, however you realize the FURDEMON's true plan, quite strange: to turn all the inhabitants of the planet into a kind of "furries" to attack other planets. You must destroy FURDEMON as soon as possible! </p>
 
@@ -171,21 +168,19 @@
 							</div>
 						</div></div>
 							<br>
-						</td>
-					</tr>
-				</table>
+					</div>
+				</div>
 			</article>
 
 			<article class="article_mods_uacarena">
 				<h2>UAC ARENA</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
+				<div class="flexbox-container">
+						<div class="flexbox-box-article-left">
 							<img src="https://img.itch.zone/aW1hZ2UvNTgzOTYwLzMwNzgxMTAucG5n/original/oGb9SP.png" class="imagen">
-						</td>
+						</div>
 
-						<td>
+						<div class="flexbox-box-article-right">
 							<div class="article_content_background"><div class="article_content"></div>
 							<p>UAC Arena is a wave survival game based on DooM 2. Basically the Arena is a room with 4 doors and every time more and more enemies are spawned and more quality. There is also a teleporter in the middle of the map where resources such as medikits or mega spheres are spawned.</p>
 							<p>Strong enemies are generated from the following rounds:</p>
@@ -222,21 +217,19 @@
 							</p>
 						</div></div>
 							<br>
-						</td>
-					</tr>
-				</table>
+					</div>
+				</div>
 			</article>
 			
 			<article class="article_mods_negativeone">
 				<h2>[Collab] Doom -1 (NEGATIVEONE)</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
 							<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen">
-						</td>
+					</div>
 
-						<td>
+					<div class="flexbox-box-article-right">
 							<div class="article_content_background"><div class="article_content">
 							<p>This is a collaborative boom-compatible 34 maps megawad where i participed, originally started by AtticTelephone</p>
 
@@ -267,9 +260,8 @@
 							</p>
 						</div></div>
 							<br>
-						</td>
-					</tr>
-				</table>
+					</div>
+				</div>
 			</article>
 
 			<article style="background:var(--section_color);">
