--- a/mods_es.html
+++ b/mods_es.html
@@ -37,13 +37,12 @@
 			<!--article style="background:var(--section_color);"-->
 				<h2>Rocketed</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
 							<img src="images/Rocketed_title.png" class="imagen">
-						</td>
+					</div>
 
-						<td>
+					<div class="flexbox-box-article-right">
 							<div class="article_content_background"><div class="article_content"></div>
 							<p>
 								Rocketed es un wad de tres mapas de un solo jugador para sourceports sin los limites de Doom Vanilla (crispy doom, boom, etc),
@@ -77,21 +76,19 @@
 							</div>
 							<br>
 						</div></div>
-						</td>
-					</tr>
-				</table>
+					</div>
+				</div>
 			</article>
 			<article class="article_mods_dimweird">
 			<!--article style="background:var(--section_color);"-->
 				<h2>Dimensional Weirdness</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
 							<img src="https://img.itch.zone/aW1hZ2UvNzI4MTMwLzQwNDM5OTkucG5n/original/A8j%2FBs.png" class="imagen">
-						</td>
+					</div>
 
-						<td>
+					<div class="flexbox-box-article-right">
 							<div class="article_content_background"><div class="article_content"></div>
 							<p>Te infiltraste en una base enemiga en donde vinieron muchos demonios, y descubriste un portal. 
 								Decidiste entrar en el portal y este te envio a un lugar interesante: 
@@ -125,23 +122,21 @@
 				
 							</div></div>
 							<br>
-						</td>
-					</tr>
-				</table>
+						</div>
+				</div>
 			</article>
 
 			<article class="article_mods_furdemon">
 				<h2>FURDEMON</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
 							<div class="youtube-video-container">
 								<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/kRN8CzcrLwg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
-						</td>
+					</div>
 
-						<td>
+					<div class="flexbox-box-article-right">
 							<div class="article_content_background"><div class="article_content"></div>
 							<p>Se instaló una nueva base de demonios en la tierra, y debes robar sus datos de invasión para contrarrestar los ataques, sin embargo te das cuenta del verdadero plan de FURDEMON, bastante extraño: convertir a todos los habitantes del planeta en una especie de "furros" para atacar a otros planetas. ¡Debes destruir FURDEMON lo antes posible!</p> 
 
@@ -177,21 +172,19 @@
 
 						</div></div>
 						<br>
-						</td>
-					</tr>
-				</table>
+					</div>
+				</div>
 			</article>
 
 			<article class="article_mods_uacarena">
 				<h2>UAC ARENA</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
 							<img src="https://img.itch.zone/aW1hZ2UvNTgzOTYwLzMwNzgxMTAucG5n/original/oGb9SP.png" class="imagen">
-						</td>
+					</div>
 
-						<td>
+					<div class="flexbox-box-article-right">
 							<div class="article_content_background"><div class="article_content"></div>
 							<p>UAC Arena es un juego de oleadas basado en Doom 2. Es basicamente una habitacion con 4 puertas de las que salen mas y mas enemigos.  Tambien hay un teletransportador de la cual salen recursos tipo megaaesferas o medikits.</p>
 							<p>Los enemigos mas fuertes salen desde las siguientes rondas:</p>
@@ -229,21 +222,19 @@
 
 						</div></div>
 						<br>
-						</td>
-					</tr>
-				</table>
+					</div>
+				</div>
 			</article>
 
 			<article class="article_mods_negativeone">
 				<h2>[Collab] Doom -1 (NEGATIVEONE)</h2>
 				<br>
-				<table>
-					<tr>
-						<td width="35%">
-							<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen">
-						</td>
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
+						<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen">
+					</div>
 
-						<td>
+					<div class="flexbox-box-article-right">
 							<div class="article_content_background"><div class="article_content">
 							<p>Este es un mod de doom colaborativo, compatible con boom, empezado por AtticTelephone</p>
 
@@ -276,9 +267,8 @@
 
 							</div></div>
 							<br>
-						</td>
-					</tr>
-				</table>
+					</div>
+				</div>
 			</article>
 			
 			<article style="background:var(--section_color);">
