centre el titulo en mods y mods_es

--- a/mods_es.html
+++ b/mods_es.html
@@ -20,7 +20,7 @@
 			<div id="Navbar_loader">Loading Navbar...</div>
 			
 			<!-- CONTENIDO -->
-			<h1>
+			<h1 class="flexbox-container">
 				<img src="images/cacoanim2.gif" alt="caco1">
 				Mods de Doom
 				<img src="images/cacoanim2.gif" alt="caco2">
