Ahora si actualice toda la pagina.

--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
 					<img src="images/xd/el_gobierno_gobierna.webp" alt="el gobierno gobierna" class="imagen_small">
 				</div>
 				<div class="flexbox-box greenBG">
-					<h2>NEWS:</h2>
-					<!--
-					<h3>IMPSCAPE is out! Go play it! → → →</h3>
+					<h2>NEWS:</h2>	
+					<h3>3/3/2024: IMPSCAPE is out! Go play it! → → →</h3>
 					<div>
-						<a href="https://github.com/Urrova/IMPSCAPE">
+						<a href="https://urrova.itch.io/impscape">
 							<img src="images/impscape/COVER.png" alt="IMPSCAPE Cover" class="imagen">
 						</a>
 					</div>
-					-->
-					<h3>. . .</h3>
-					<br>
-					<img src="images/xd/bola_de_paja.gif" alt="paja" class="imagen">
+					<p>
+						<a href="https://urrova.itch.io/impscape">Download from itch.io</a>
+					</p>
+					<p>
+						<a href="https://www.doomworld.com/forum/topic/143711-impscape-the-escape-from-uac-rc1-gzdoom/">Doomworld Thread</a>
+					</p>
 				</div>
 			</div>
 			<br><hr><br>
@@ -82,6 +83,13 @@
 				<a href="https://on.soundcloud.com/iZZQd" title="My soundcloud account.">
 					<i class="fa-brands fa-soundcloud fa-10x SVGicon"></i>
 					<p>Soundcloud</p>
+				</a>
+			</div>
+
+			<div class = "SocialNetIcon">
+				<a href="https://twitter.com/_Urrova_" title="My twitter account.">
+					<i class="fa-brands fa-twitter fa-10x SVGicon"></i>
+					<p>Twitter (muerto)</p>
 				</a>
 			</div>
 			
