--- a/mods.html
+++ b/mods.html
@@ -32,7 +32,7 @@
 				<br>
 			</div>
 
-			<!-- Rocketed -->
+			<!-- Impscape -->
 			<article class="article_mods_impscape">
 				<!--article style="background:var(--section_color);"-->
 					<h2>
@@ -56,6 +56,8 @@
 					
 									<p><b>IMPSCAPE</b> is a 7 maps modification for Doom II, for GZDoom. Fight against the UAC forces throught bases, prisons, factories and computers, and burn them with your fireballs!</p>
 
+									<p><b>BE SURE OF READING THE MANUAL (Read This! section) BEFORE PLAYING. It has important information.</b></p>
+
 									<h3>Features:</h3>
 									<ul class="greenBG">
 										<li>Play as an Imp, a brown bastard from hell, who heaves fireballs down the UAC marines throat (and takes several bullets to die).</li>
@@ -72,7 +74,7 @@
 									</p>
 					
 									<p class="center">
-										<a href="https://www.doomworld.com/forum/topic/132933-rocketed-3-rocket-launcher-only-maps-for-doom-2/">Go to its doomworld thread</a>
+										<a href="https://www.doomworld.com/forum/topic/143711-impscape-the-escape-from-uac-rc1-gzdoom/">Go to its doomworld thread</a>
 									</p>
 								</div>
 							</div>
