--- a/music.html
+++ b/music.html
@@ -150,6 +150,16 @@
 							</audio>
 						</p>
 					</li>
+					<li>
+						<p>
+							<b>House of Bones</b> - 09/04/2024 <br>
+							(Donna to the rescue from Doom + Bye Bye American Pie from Doom 2) <br><br>
+
+							<audio controls>
+								<source src="audio/House_of_Bones.mp3", type="audio/mpeg">
+							</audio>
+						</p>
+					</li>
 				</ul>
 				
 
