--- a/music_es.html
+++ b/music_es.html
@@ -151,6 +151,16 @@
 							</audio>
 						</p>
 					</li>
+					<li>
+						<p>
+							<b>House of Bones</b> - 09/04/2024 <br>
+							(Donna to the rescue del Doom + Bye Bye American Pie del Doom 2) <br><br>
+
+							<audio controls>
+								<source src="audio/House_of_Bones.mp3", type="audio/mpeg">
+							</audio>
+						</p>
+					</li>
 				</ul>
 
 				
