--- a/music.html
+++ b/music.html
@@ -152,7 +152,7 @@
 					</li>
 					<li>
 						<p>
-							<b>House of Bones</b> - 09/04/2024 <br>
+							<b>(B-Side) House of Bones</b> - 09/04/2024 <br>
 							(Donna to the rescue from Doom + Bye Bye American Pie from Doom 2) <br><br>
 
 							<audio controls>
