--- a/music_es.html
+++ b/music_es.html
@@ -153,7 +153,7 @@
 					</li>
 					<li>
 						<p>
-							<b>House of Bones</b> - 09/04/2024 <br>
+							<b>(B-Side) House of Bones</b> - 09/04/2024 <br>
 							(Donna to the rescue del Doom + Bye Bye American Pie del Doom 2) <br><br>
 
 							<audio controls>
