Arregle ciertos elementos saliendose de la pantalla en responsive.

--- a/index_es.html
+++ b/index_es.html
@@ -30,14 +30,14 @@
 			<div class="flexbox-container">
 				<div class="flexbox-box greenBG">
 					<h2>Ahora mismo trabajando en: nada lol</h2>
-					<img src="images/xd/el_gobierno_gobierna.webp" alt="el gobierno gobierna" class="imagen_small">
+					<img src="images/xd/el_gobierno_gobierna.webp" alt="el gobierno gobierna" class="imagen_small borde">
 				</div>
 				<div class="flexbox-box greenBG">
 					<h2>NEWS:</h2>	
 					<h3>3/3/2024: IMPSCAPE esta publicado! Vayan a jugarlo! → → →</h3>
 					<div>
 						<a href="https://urrova.itch.io/impscape">
-							<img src="images/impscape/COVER.png" alt="IMPSCAPE Cover" class="imagen">
+							<img src="images/impscape/COVER.png" alt="IMPSCAPE Cover" class="imagen borde">
 						</a>
 					</div>
 					<p>
