--- a/mods.html
+++ b/mods.html
@@ -36,7 +36,9 @@
 			<article class="article_mods_impscape">
 				<!--article style="background:var(--section_color);"-->
 					<h2>
-						<img src="images/impscape/BANNER_CROPPED.png" alt="">
+						<div>
+							<img class="imagen" src="images/impscape/BANNER_CROPPED.png" alt="">
+						</div>
 					</h2>
 					<br>
 					<div class="flexbox-container">
@@ -49,7 +51,7 @@
 						<div class="flexbox-box-article-right">
 							<div class="article_content_background">
 								<div class="article_content">
-									<img src="https://img.itch.zone/aW1nLzE1MjA1NTgyLnBuZw==/original/gbhB%2Bi.png" alt="HELL HAS BEEN INVADED">
+									<img src="https://img.itch.zone/aW1nLzE1MjA1NTgyLnBuZw==/original/gbhB%2Bi.png" alt="HELL HAS BEEN INVADED" class="imagen">
 									<p>Invaded by human marines, allied with the empire of the Union Aerospace Corporation.</p>
 					
 									<p><b>You're an imp.</b> Those of the UAC captured you to make demon-control experiments. Now you have to escape from the UAC and return to your home, Hell!</p>
@@ -90,7 +92,7 @@
 				<br>
 				<div class="flexbox-container">
 					<div class="flexbox-box-article-left">
-						<img src="images/Rocketed_title.png" class="imagen">
+						<img src="images/Rocketed_title.png" class="imagen borde">
 					</div>
 
 					<div class="flexbox-box-article-right">
@@ -134,7 +136,7 @@
 				<br>
 				<div class="flexbox-container">
 					<div class="flexbox-box-article-left">
-							<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen">
+							<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen borde">
 					</div>
 
 					<div class="flexbox-box-article-right">
@@ -178,7 +180,7 @@
 				<br>
 				<div class="flexbox-container">
 					<div class="flexbox-box-article-left">
-							<img src="https://img.itch.zone/aW1hZ2UvNzI4MTMwLzQwNDM5OTkucG5n/original/A8j%2FBs.png" class="imagen">
+							<img src="https://img.itch.zone/aW1hZ2UvNzI4MTMwLzQwNDM5OTkucG5n/original/A8j%2FBs.png" class="imagen borde">
 					</div>
 
 					<div class="flexbox-box-article-right">
@@ -273,7 +275,7 @@
 				<br>
 				<div class="flexbox-container">
 						<div class="flexbox-box-article-left">
-							<img src="https://img.itch.zone/aW1hZ2UvNTgzOTYwLzMwNzgxMTAucG5n/original/oGb9SP.png" class="imagen">
+							<img src="https://img.itch.zone/aW1hZ2UvNTgzOTYwLzMwNzgxMTAucG5n/original/oGb9SP.png" class="imagen borde">
 						</div>
 
 						<div class="flexbox-box-article-right">
