--- a/mods_es.html
+++ b/mods_es.html
@@ -49,7 +49,7 @@
 						<div class="flexbox-box-article-right">
 							<div class="article_content_background">
 								<div class="article_content">
-									<img src="https://img.itch.zone/aW1nLzE1MjA1NTgyLnBuZw==/original/gbhB%2Bi.png" alt="HELL HAS BEEN INVADED">
+									<img src="https://img.itch.zone/aW1nLzE1MjA1NTgyLnBuZw==/original/gbhB%2Bi.png" alt="HELL HAS BEEN INVADED" class="imagen">
 									<p>Invadido por marines espaciales humanos, aliados con el imperio de la Union Aerospace Corporation.</p>
 					
 									<p><b>Vos sos un imp.</b> Los de la UAC te capturaron para hacer experimentos de control de demonios. Ahora tienes que escapar de la UAC y volver a tu hogar, el Infierno!</p>
@@ -90,7 +90,7 @@
 				<br>
 				<div class="flexbox-container">
 					<div class="flexbox-box-article-left">
-							<img src="images/Rocketed_title.png" class="imagen">
+							<img src="images/Rocketed_title.png" class="imagen borde">
 					</div>
 
 					<div class="flexbox-box-article-right">
@@ -137,7 +137,7 @@
 				<br>
 				<div class="flexbox-container">
 					<div class="flexbox-box-article-left">
-						<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen">
+						<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen borde">
 					</div>
 
 					<div class="flexbox-box-article-right">
@@ -183,7 +183,7 @@
 				<br>
 				<div class="flexbox-container">
 					<div class="flexbox-box-article-left">
-							<img src="https://img.itch.zone/aW1hZ2UvNzI4MTMwLzQwNDM5OTkucG5n/original/A8j%2FBs.png" class="imagen">
+							<img src="https://img.itch.zone/aW1hZ2UvNzI4MTMwLzQwNDM5OTkucG5n/original/A8j%2FBs.png" class="imagen borde">
 					</div>
 
 					<div class="flexbox-box-article-right">
@@ -279,7 +279,7 @@
 				<br>
 				<div class="flexbox-container">
 					<div class="flexbox-box-article-left">
-							<img src="https://img.itch.zone/aW1hZ2UvNTgzOTYwLzMwNzgxMTAucG5n/original/oGb9SP.png" class="imagen">
+							<img src="https://img.itch.zone/aW1hZ2UvNTgzOTYwLzMwNzgxMTAucG5n/original/oGb9SP.png" class="imagen borde">
 					</div>
 
 					<div class="flexbox-box-article-right">
