--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 			<div class="flexbox-container">
 				<div class="flexbox-box greenBG">
 					<h2>Right now working on: nothing lol</h2>
-					<img src="images/xd/el_gobierno_gobierna.webp" alt="el gobierno gobierna" class="imagen_small">
+					<img src="images/xd/el_gobierno_gobierna.webp" alt="el gobierno gobierna" class="imagen_small borde">
 				</div>
 				<div class="flexbox-box greenBG">
 					<h2>NEWS:</h2>	
 					<h3>3/3/2024: IMPSCAPE is out! Go play it! → → →</h3>
 					<div>
 						<a href="https://urrova.itch.io/impscape">
-							<img src="images/impscape/COVER.png" alt="IMPSCAPE Cover" class="imagen">
+							<img src="images/impscape/COVER.png" alt="IMPSCAPE Cover" class="imagen borde">
 						</a>
 					</div>
 					<p>
