Ahora si, la cague en las imagenes pero lo resolvi

--- a/mods.html
+++ b/mods.html
@@ -37,7 +37,7 @@
 				<!--article style="background:var(--section_color);"-->
 					<h2>
 						<div>
-							<img class="imagen" src="images/impscape/BANNER_CROPPED.png" alt="">
+							<img class="imagen_small" src="images/impscape/BANNER_CROPPED.png" alt="">
 						</div>
 					</h2>
 					<br>
