--- a/mods_es.html
+++ b/mods_es.html
@@ -36,7 +36,7 @@
 			<article class="article_mods_impscape">
 				<!--article style="background:var(--section_color);"-->
 					<h2>
-						<img src="images/impscape/BANNER_CROPPED.png" alt="">
+						<img class="imagen_small" src="images/impscape/BANNER_CROPPED.png" alt="">
 					</h2>
 					<br>
 					<div class="flexbox-container">
