--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -36,6 +36,10 @@
 					pero despues esto esta mas que nada de decoracion.
 					Asi que, para el random que vea mi sitio web . . .
 				</p>
+
+				<p>
+					Vivo en  <span class="text_green text_glitchy">La MATRIX</span> tambien conocida como la Argentina.
+				</p>
 				
 				<p>
 					<b>VIDEOJUEGOS</b> <br>
@@ -58,7 +62,8 @@
 					Lo que si, IMPSCAPE fue un exceso, no se tomen tan en serio
 					y de vida o muerte hacer mods para un juego, no le pongan 2 años a un solo wad, no necesitan hacer el megawad
 					de 32 mapas con 25000 lineas de ZScript para ser valorados. <br>
-					Ahora estoy completamente cansado del doom asi que, no creo que siga sacando mas mods. <br>
+					Si quieren hacer una obra maestra del doom, no la hagan solos. No sean como yo y unanse a community projects. Las obras maestras se hacen de a muchos. <br>
+					Ahora estoy <span class="text_glitchy">COMPLETAMENTE CANSADO DEL DOOM</span> asi que, no creo que siga sacando mas mods. <br>
 				</p>
 
 				<p>
