--- a/aboutme.html
+++ b/aboutme.html
@@ -35,6 +35,10 @@
 				</p>
 				
 				<p>
+					I live in <span class="text_green text_glitchy">The MATRIX</span> a.k.a. Argentina.
+				</p>
+
+				<p>
 					<b>VIDEOGAMES</b> <br>
 					I like old FPS games
 						(<a href="https://store.steampowered.com/app/2280/DOOM_1993/">DOOM</a>; 
@@ -55,7 +59,8 @@
 					Althrought, IMPSCAPE was an excess, dont take too seriously and of life or death
 					making mods for a game, it isnt your life project, dont put 2 years or something to your wad,
 					you dont need to make the 32 maps megawad with 25000 ZScript lines to being valorated.<br>
-					Now i have doom burnout, so i dont develop any more mods. <br>
+					If you want to do a doom masterpiece, dont go alone. Dont be like me and join community projects. Masterpieces are done by groups of many people. <br>
+					Now i have <span class="text_glitchy">DOOM BURNOUT</span>, so i dont develop any more mods. <br>
 				</p>
 
 				<p>
