--- a/index_es.html
+++ b/index_es.html
@@ -25,7 +25,7 @@
 			<!-- CONTENIDO -->
 			<h1>Bienvenido a mi pagina!</h1>
 			<div id="oc_container"> <p>Cargando personaje . . .</p> </div>
-			<p>Saludos desde Argentina <img src="images/flags/argentina-flag-3d-icon-16.png" alt="AR">.</p>
+			<p>Saludos desde <span class="text_green text_glitchy">La MATRIX</span> (Argentina <img src="images/flags/argentina-flag-3d-icon-16.png" alt="AR">).</p>
 			<br><hr><br>
 			<div class="flexbox-container">
 				<div class="flexbox-box greenBG">
