--- a/aboutme.html
+++ b/aboutme.html
@@ -78,6 +78,11 @@
 					(<a href="https://www.doomworld.com/forum/topic/128549-doom-1-negative-one-beyond-the-experiment-release-thread/">NEGATIVEONE</a>;
 					<a href="https://www.doomworld.com/forum/topic/141857-amalgoom-episode-1-the-red-valley-of-death-is-finally-here/">Alamgoom</a>). <br>
 				</p>
+
+				<h3>Frequently Asked Questions</h3>
+				<p>
+					What FAQ????? Nobody knows me lol.
+				</p>
 				<br><br><br><br><br>
 				<p><img src="images/under-construction.gif" alt=""></p>
 			</article>
