--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
 				</p>
 				
 				<p>
-					I live in <span class="text_green text_glitchy">The MATRIX</span> a.k.a. Argentina.
+					I live in <span class="text_green text_glitchy">The MATRIX / Rapture</span> a.k.a. Argentina.
 				</p>
 
 				<p>
@@ -60,7 +60,7 @@
 					making mods for a game, it isnt your life project, dont put 2 years or something to your wad,
 					you dont need to make the 32 maps megawad with 25000 ZScript lines to being valorated.<br>
 					If you want to do a doom masterpiece, dont go alone. Dont be like me and join community projects. Masterpieces are done by groups of many people. <br>
-					Now i have <span class="text_glitchy">DOOM BURNOUT</span>, so i dont develop any more mods. <br>
+					Now i have <span class="text_glitchy">DOOM BURNOUT</span>, so i dont develop any more individal mods. <br>I will sometimes do maps for community projects, but i will not make anything too big again, not for doom.<br>
 				</p>
 
 				<p>
