--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -38,7 +38,7 @@
 				</p>
 
 				<p>
-					Vivo en  <span class="text_green text_glitchy">La MATRIX</span> tambien conocida como la Argentina.
+					Vivo en  <span class="text_green text_glitchy">La MATRIX / Rapture</span> tambien conocida como la Argentina.
 				</p>
 				
 				<p>
@@ -63,7 +63,7 @@
 					y de vida o muerte hacer mods para un juego, no le pongan 2 años a un solo wad, no necesitan hacer el megawad
 					de 32 mapas con 25000 lineas de ZScript para ser valorados. <br>
 					Si quieren hacer una obra maestra del doom, no la hagan solos. No sean como yo y unanse a community projects. Las obras maestras se hacen de a muchos. <br>
-					Ahora estoy <span class="text_glitchy">COMPLETAMENTE CANSADO DEL DOOM</span> asi que, no creo que siga sacando mas mods. <br>
+					Ahora estoy <span class="text_glitchy">COMPLETAMENTE CANSADO DEL DOOM</span> asi que, no creo que siga sacando mas mods individuales. <br>Cada tanto voy a hacer algun mapa para algun community project pero no voy a hacer otras cosas demasiado grandes, no para doom.<br>
 				</p>
 
 				<p>
