--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -38,7 +38,7 @@
 				</p>
 
 				<p>
-					Vivo en  <span class="text_green text_glitchy">La MATRIX / Rapture</span> tambien conocida como la Argentina.
+					Vivo en  <span class="text_green text_glitchy">La MATRIX/Rapture/Raccoon City</span> tambien conocida como la Argentina.
 				</p>
 				
 				<p>
