--- a/index_es.html
+++ b/index_es.html
@@ -29,8 +29,16 @@
 			<br><hr><br>
 			<div class="flexbox-container">
 				<div class="flexbox-box greenBG">
-					<h2>Ahora mismo trabajando en: nada lol</h2>
-					<img src="images/xd/el_gobierno_gobierna.webp" alt="el gobierno gobierna" class="imagen_small borde">
+					<h2>Ahora mismo trabajando en:</h2>
+					<img src="images/cacoanim2.gif" alt="el gobierno gobierna" class="imagen_small">
+					<ul>
+						<li>
+							<h3>Musica para el OST de Amalgoom</h3>
+						</li>
+						<li>
+							<h3>Un mapa para el community project 1sector.</h3>
+						</li>
+					</ul>
 				</div>
 				<div class="flexbox-box greenBG">
 					<h2>NEWS:</h2>	
