--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
 				</p>
 				
 				<p>
-					I live in <span class="text_green text_glitchy">The MATRIX / Rapture</span> a.k.a. Argentina.
+					I live in <span class="text_green text_glitchy">The MATRIX/Rapture/Raccoon City</span> a.k.a. Argentina.
 				</p>
 
 				<p>
