--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
 			<br><hr><br>
 			<div class="flexbox-container">
 				<div class="flexbox-box greenBG">
-					<h2>Right now working on: nothing lol</h2>
-					<img src="images/xd/el_gobierno_gobierna.webp" alt="el gobierno gobierna" class="imagen_small borde">
+					<h2>Right now working on:</h2>
+					<img src="images/cacoanim2.gif" alt="el gobierno gobierna" class="imagen_small">
+					<ul>
+						<li>
+							<h3>Music for the Amalgoom OST</h3>
+						</li>
+						<li>
+							<h3>A map for the 1sector community project.</h3>
+						</li>
+					</ul>
 				</div>
 				<div class="flexbox-box greenBG">
 					<h2>NEWS:</h2>	
