--- a/music.html
+++ b/music.html
@@ -132,8 +132,9 @@
 				<ul class="greenBG">
 					<li>
 						<p>
-							<b>Facing the Opening to Hell</b> - 30/11/2023<br>
-							(Facing the Spider from Doom + Opening to Hell from Doom 2) <br><br>
+							<b>(B-Side) Facing the Opening to Hell</b> - 30/11/2023<br>
+							(Facing the Spider from Doom + Opening to Hell from Doom 2) <br>
+							Moved to b-sides because Lee Jackon, but whatever.<br><br>
 
 							<audio controls>
 								<source src="audio/Facing_the_Opening_to_Hell.mp3", type="audio/mpeg">
@@ -157,6 +158,16 @@
 
 							<audio controls>
 								<source src="audio/House_of_Bones.mp3", type="audio/mpeg">
+							</audio>
+						</p>
+					</li>
+					<li>
+						<p>
+							<b>Run, Dave, Run!!</b> - 22/06/2024 <br>
+							(They're going to get you from Doom + The Dave D. Taylor Blues from Doom 2) <br><br>
+							
+							<audio controls>
+								<source src="audio/Run_Dave_Run.mp3", type="audio/mpeg">
 							</audio>
 						</p>
 					</li>
