--- a/music.html
+++ b/music.html
@@ -134,7 +134,7 @@
 						<p>
 							<b>(B-Side) Facing the Opening to Hell</b> - 30/11/2023<br>
 							(Facing the Spider from Doom + Opening to Hell from Doom 2) <br>
-							Moved to b-sides because Lee Jackon, but whatever.<br><br>
+							Moved to b-sides because Lee Jackson, but whatever.<br><br>
 
 							<audio controls>
 								<source src="audio/Facing_the_Opening_to_Hell.mp3", type="audio/mpeg">
