Nueva barra de navegacion (mas comprimida y con nuevas huevadas inutiles como la pagina misma)

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="ingles">
+		<meta name="linuxpath" content="~/en/about">
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 		<!--OpenGraph-->
 		<meta property="og:title" content="URROVA:/aboutme"/>
@@ -26,7 +27,7 @@
 			<h1>... quien soy¿</h1>
 			<article>
 				<p>
-						<del>No cuarteto de nos reference for english users lol.</del>
+					<del>No cuarteto de nos reference for english users lol.</del>
 				</p>
 
 				<p>
@@ -36,7 +37,9 @@
 				
 				<p>
 					I live in <span class="text_green text_glitchy">The MATRIX/Rapture/Raccoon City</span> a.k.a. Argentina.
+					Right now i make music, make game mods, and try to live life (unsucessfully).
 				</p>
+
 
 				<p>
 					<b>VIDEOGAMES</b> <br>
