--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="espanol">
+		<meta name="linuxpath" content="~/es/about">
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 		<!--OpenGraph-->
 		<meta property="og:title" content="URROVA:/aboutme_es"/>
@@ -39,6 +40,7 @@
 
 				<p>
 					Vivo en  <span class="text_green text_glitchy">La MATRIX/Rapture/Raccoon City</span> tambien conocida como la Argentina.
+					Ahora mismo hago musica, mods de videojuegos, y trato de vivir la vida (sin mucho exito).
 				</p>
 				
 				<p>
