--- a/html_modules/navbar.html
+++ b/html_modules/navbar.html
@@ -1,5 +1,11 @@
 <center class="Navbar">
-	<h1>- URROVA -</h1>
+	<div id = "navbar_title_mobile">
+		<h1>Urrova's website</h1>
+	</div>
+	<div id="navbar_title_desktop">
+		<h1 id="navbar_title_main">Urrova's website</h1>
+		<p id="navbar_linuxpath">guest@urrova:<span id="navbar_linuxpath_path">...</span></p>
+	</div>
 	<marquee id="Navbar_marquee">I DONT KNOW HOW TO PROGRAM</marquee>
 	<hr>
 	<ul class="Navbar_Buttons_Desktop">
@@ -16,7 +22,6 @@
 		<li class="idioma"><a href="index_es.html">Español</a></li>
 	</ul>
 	<details class="Navbar_Buttons_Mobile">
-		
 		<summary><p style="display:inline">Expand</p></summary>
 		<p><a href="index.html" target="_parent">Home</a></p>
 		<!-- <p><a href="vgames.html" target="_parent">Videogames</a></p> -->
