--- a/index_es.html
+++ b/index_es.html
@@ -6,6 +6,7 @@
 		<script src="https://kit.fontawesome.com/f9565b969b.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="espanol">
+		<meta name="linuxpath" content="~/es/index">
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 		<!--OpenGraph-->
 		<meta property="og:title" content="URROVA:/index_es"/>
