--- a/html_modules/navbar_es.html
+++ b/html_modules/navbar_es.html
@@ -1,5 +1,11 @@
 <center class="Navbar">
-	<h1>- URROVA -</h1>
+	<div id = "navbar_title_mobile">
+		<h1>Urrova's website</h1>
+	</div>
+	<div id="navbar_title_desktop">
+		<h1 id="navbar_title_main">Urrova's website</h1>
+		<p id="navbar_linuxpath">guest@urrova:<span id="navbar_linuxpath_path">...</span></p>
+	</div>
 	<marquee id="Navbar_marquee">NO SE PROGRAMAR</marquee>
 	<hr>
 	<ul class="Navbar_Buttons_Desktop">
