--- a/music_es.html
+++ b/music_es.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="espanol">
+		<meta name="linuxpath" content="~/es/music">
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 		<!--OpenGraph-->
 		<meta property="og:title" content="URROVA:/music_es"/>
