--- a/mods.html
+++ b/mods.html
@@ -20,8 +20,18 @@
 			<!-- Barra de navegacion -->
 			<div id="Navbar_loader">Loading Navbar...</div>
 			
+			<h1>Videogame Mods</h1>
+
+			<article class="article_index">
+				<p class="text_console_highlighted">INDEX</p>
+				<ul>
+					<li><a href="#title_mods_doom">Doom Mods</a></li>
+					<li><a href="#title_mods_doom_communityprojects">Doom Community Projects</a></li>
+				</ul>
+			</article>
+
 			<!-- CONTENIDO -->
-			<h1 class="flexbox-container">
+			<h1 class="flexbox-container" id="title_mods_doom">
 				<img src="images/cacoanim2.gif" alt="caco1">
 				Doom Mods
 				<img src="images/cacoanim2.gif" alt="caco2">
@@ -131,50 +141,7 @@
 				</div>
 			</article>
 
-			
-			<article class="article_mods_negativeone">
-				<h2>[Collab] Doom -1 (NEGATIVEONE)</h2>
-				<br>
-				<div class="flexbox-container">
-					<div class="flexbox-box-article-left">
-							<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen borde">
-					</div>
-
-					<div class="flexbox-box-article-right">
-							<div class="article_content_background"><div class="article_content">
-							<p>This is a collaborative boom-compatible 34 maps megawad where i participed, originally started by AtticTelephone</p>
-
-							<p>That was called a "Social Experiment", where anybody can edit that wad and release the version, and after that another person can edit.<br>
-							The wad was an exit, but was released with bugs, so i make a bugfix thread for the people that wants to polish more the wad.</p>
-
-							<h3>Information:</h3>
-								<ul class="greenBG">
-								<li>Game mode: Single player/Coop/Deathmatch</li>
-								<li>IWAD: DOOM2.wad</li>
-								<li>Recomended engine: Boom/MBF to up.</li>
-								<li>Maps: 35</li>
-								<li>Difficulty settings: Implemented on some of the levels.</li>
-							</ul>
-
-							<p class="center">
-								<a href="https://www.doomworld.com/idgames/levels/doom2/Ports/megawads/negativeone" class="button">Download from /idgames</a>
-							</p>
-
-							<p class="center">
-								<a href="https://www.doomworld.com/forum/topic/115781-doom-1-a-doomworld-experiment">Original version development thread</a> | 
-								<a href="https://www.doomworld.com/forum/topic/117325-doom-1-the-final-release/">Original version release thread</a>
-							</p>
-						
-							<p class="center">
-								<a href="https://www.doomworld.com/forum/topic/117348-doom-1-complete-the-bugfix-thread/">Bugfix version development thread</a> | 
-								<a href="https://www.doomworld.com/forum/topic/128549-doom-1-negative-one-beyond-the-experiment-release-thread/">Bugfix version release thread</a>
-							</p>
-						</div></div>
-							<br>
-					</div>
-				</div>
-			</article>
-
+			<!--Dimensional Weirdness-->
 			<article class="article_mods_dimweird">
 			<!--article style="background:var(--section_color);"-->
 				<h2>Dimensional Weirdness</h2>
@@ -346,6 +313,125 @@
 			</article>
 
 			<br>
+
+			<h1 class="flexbox-container" id="title_mods_doom_communityprojects">
+				<img src="images/cacoanim2.gif" alt="caco1">
+				Doom Community Projects
+				<img src="images/cacoanim2.gif" alt="caco2">
+			</h1>
+
+			<!--Amalgoom-->
+			<article class="">
+				<h2>Amalgoom</h2>
+				<br>
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
+							<img src="https://i.imgur.com/WXVRYh3.png" class="imagen borde">
+					</div>
+
+					<div class="flexbox-box-article-right">
+							<div class="article_content_background"><div class="article_content">
+							<p>This is a Community Project started by Johnny Cruelty/Grungo and continued by DoomGappy.</p>
+
+							<p>Its a boom compatible megawad that mixes the original Doom and Doom II levels.
+							Each map also has its own remixed song based on the original MIDIs of each map. <br>
+							I collaborated to this project with 4 MIDI songs (2 main and 2 B-Sides)
+							</p>
+
+							<p><span class="text_yellow">THE WAD IS STILL IN DEVELOPMENT</span>. You can download the first episode from the button below.</p>
+
+							<p class="center">
+								<a href="https://drive.google.com/file/d/1_Izqbe56b0qshvtSY1ELGZSbBZUEVlRz/view?usp=sharing" class="button">Download the first episode</a>
+							</p>
+
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/141857-amalgoom-mixing-doom-and-doom-2-special-announcement-on-page-8/">Doomworld Development Thread</a>
+							</p>
+			
+						</div></div>
+							<br>
+					</div>
+				</div>
+			</article>
+
+			<!--1 Sector Community Project-->
+			<article class="">
+				<h2>1 Sector Community Project</h2>
+				<br>
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
+							<img src="https://static.doomworld.com/monthly_2024_05/image.png.27c035d005a94b6b32d7cedf3bdbcb86.png" class="imagen borde">
+					</div>
+
+					<div class="flexbox-box-article-right">
+							<div class="article_content_background"><div class="article_content">
+							<p>This is a Community Project managed by iddq tea.</p>
+
+							<p>Its a boom compatible megawad thats made by maps with only 1 sector, that means only
+								1 floor and 1 ceiling. <br>
+							</p>
+
+							<p>I made (am making) MAP17, a map that is a giant scrolling sector.</p>
+
+							<p><span class="text_yellow">THE WAD IS STILL IN DEVELOPMENT</span>. No download available right now.</p>
+
+							<p class="center">
+								<a href="https://urrova.github.io/404.html" class="button">(dont) Download</a>
+							</p>
+
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/145148-1-sector-community-project/">Doomworld Development Thread</a>
+							</p>
+			
+						</div></div>
+							<br>
+					</div>
+				</div>
+			</article>
+
+			<!--Doom -1-->
+			<article class="article_mods_negativeone">
+				<h2>Doom -1 (NEGATIVEONE)</h2>
+				<br>
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
+							<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen borde">
+					</div>
+
+					<div class="flexbox-box-article-right">
+							<div class="article_content_background"><div class="article_content">
+							<p>This is a collaborative boom-compatible 34 maps megawad where I participated, originally started by AtticTelephone</p>
+
+							<p>That was called a "Social Experiment", where anybody can edit that wad and release the version, and after that another person can edit.<br>
+							The wad was an exit, but was released with bugs, so i make a bugfix thread for the people that wants to polish more the wad.</p>
+
+							<h3>Information:</h3>
+								<ul class="greenBG">
+								<li>Game mode: Single player/Coop/Deathmatch</li>
+								<li>IWAD: DOOM2.wad</li>
+								<li>Recomended engine: Boom/MBF to up.</li>
+								<li>Maps: 35</li>
+								<li>Difficulty settings: Implemented on some of the levels.</li>
+							</ul>
+
+							<p class="center">
+								<a href="https://www.doomworld.com/idgames/levels/doom2/Ports/megawads/negativeone" class="button">Download from /idgames</a>
+							</p>
+
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/115781-doom-1-a-doomworld-experiment">Original version development thread</a> | 
+								<a href="https://www.doomworld.com/forum/topic/117325-doom-1-the-final-release/">Original version release thread</a>
+							</p>
+						
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/117348-doom-1-complete-the-bugfix-thread/">Bugfix version development thread</a> | 
+								<a href="https://www.doomworld.com/forum/topic/128549-doom-1-negative-one-beyond-the-experiment-release-thread/">Bugfix version release thread</a>
+							</p>
+						</div></div>
+							<br>
+					</div>
+				</div>
+			</article>
 			
 			<div id="Footer_loader"> <p>Loading footer...</p> </div>
 		<!-- JAVASCRIPT HERE -->
