--- a/mods_es.html
+++ b/mods_es.html
@@ -20,8 +20,18 @@
 			<!-- Barra de navegacion -->
 			<div id="Navbar_loader">Loading Navbar...</div>
 			
+			<h1>Mods de Videojuegos</h1>
+
+			<article class="article_index">
+				<p class="text_console_highlighted">INDICE</p>
+				<ul>
+					<li><a href="#title_mods_doom">Mods de Doom</a></li>
+					<li><a href="#title_mods_doom_communityprojects">Community Projects de Doom</a></li>
+				</ul>
+			</article>
+
 			<!-- CONTENIDO -->
-			<h1 class="flexbox-container">
+			<h1 class="flexbox-container" id="title_mods_doom">
 				<img src="images/cacoanim2.gif" alt="caco1">
 				Mods de Doom
 				<img src="images/cacoanim2.gif" alt="caco2">
@@ -133,50 +143,6 @@
 			</article>
 
 			
-			<article class="article_mods_negativeone">
-				<h2>[Collab] Doom -1 (NEGATIVEONE)</h2>
-				<br>
-				<div class="flexbox-container">
-					<div class="flexbox-box-article-left">
-						<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen borde">
-					</div>
-
-					<div class="flexbox-box-article-right">
-							<div class="article_content_background"><div class="article_content">
-							<p>Este es un mod de doom colaborativo, compatible con boom, empezado por AtticTelephone</p>
-
-							<p>Esto fue llamado un experimento social, en el cual cualquiera podia reservar mapas, editarlos y publicarlos para que otro pudiera editarlos tambien.<br>
-							El wad fue un exito, pero salio con varios bugs, es por eso que hice un thread de doomworld para la version bugfix</p>
-
-							<h3>Informacion:</h3>
-							<ul class="greenBG">
-							<li>Modo de juego: Solo/Coop/Deathmatch</li>
-							<li>IWAD: DOOM2.wad</li>
-							<li>Motor recomendado: Boom/MBF to up.</li>
-							<li>Mapas: 35</li>
-							<li>Ajustes de dificultad: Implementados en algunos de los niveles.</li>
-							</ul>
-
-
-							<p class="center">
-								<a href="https://www.doomworld.com/idgames/levels/doom2/Ports/megawads/negativeone" class="button">Descargar desde /idgames</a>
-							</p>
-
-							<p class="center">
-								<a href="https://www.doomworld.com/forum/topic/115781-doom-1-a-doomworld-experiment">Hilo de desarrollo de la version original</a> | 
-								<a href="https://www.doomworld.com/forum/topic/117325-doom-1-the-final-release/">Hilo de publicacion de la version original</a>
-							</p>
-						
-							<p class="center">
-								<a href="https://www.doomworld.com/forum/topic/117348-doom-1-complete-the-bugfix-thread/">Hilo de desarrollo de la version bugfix</a> | 
-								<a href="https://www.doomworld.com/forum/topic/128549-doom-1-negative-one-beyond-the-experiment-release-thread/">Hilo de publicacion de la version bugfix</a>
-							</p>
-
-							</div></div>
-							<br>
-					</div>
-				</div>
-			</article>
 
 			<article class="article_mods_dimweird">
 			<!--article style="background:var(--section_color);"-->
@@ -348,6 +314,133 @@
 					<a href="https://www.doomworld.com/idgames/levels/doom2/deathmatch/Ports/a-c/ancenter">ANCENTER en /idgames</a>
 				</p>
 				<br>
+			</article>
+
+			<br>
+
+			<h1 class="flexbox-container" id="title_mods_doom_communityprojects">
+				<img src="images/cacoanim2.gif" alt="caco1">
+				Community Projects de Doom
+				<img src="images/cacoanim2.gif" alt="caco2">
+			</h1>
+
+			<!--Amalgoom-->
+			<article class="">
+				<h2>Amalgoom</h2>
+				<br>
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
+							<img src="https://i.imgur.com/WXVRYh3.png" class="imagen borde">
+					</div>
+
+					<div class="flexbox-box-article-right">
+							<div class="article_content_background"><div class="article_content">
+							<p>Este es un Community Project empezado por Johnny Cruelty/Grungo y continuado por DoomGappy.</p>
+
+							<p>Its a boom compatible megawad that mixes the original Doom and Doom II levels.
+							Each map also has its own remixed song based on the original MIDIs of each map. <br>
+							I collaborated to this project with 4 MIDI songs (2 main and 2 B-Sides)
+							</p>
+
+							<p>Es un megawad boom-compatible que mezcla los mapas originales de Doom y Doom II.
+							Cada uno tambien tiene su cancion basada en los MIDIs originales de cada mapa. <br>
+							Colabore a este proyecto con 4 MIDIs (2 principales y 2 B-Sides)
+							</p>
+
+							<p><span class="text_yellow">EL WAD SIGUE EN DESARROLLO</span>. Podes descargar el primer episodio desde el boton abajo.</p>
+
+							<p class="center">
+								<a href="https://drive.google.com/file/d/1_Izqbe56b0qshvtSY1ELGZSbBZUEVlRz/view?usp=sharing" class="button">Descargar el primer episodio</a>
+							</p>
+
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/141857-amalgoom-mixing-doom-and-doom-2-special-announcement-on-page-8/">Hilo de desarrollo en Doomworld</a>
+							</p>
+			
+						</div></div>
+							<br>
+					</div>
+				</div>
+			</article>
+
+			<!--1 Sector Community Project-->
+			<article class="">
+				<h2>1 Sector Community Project</h2>
+				<br>
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
+							<img src="https://static.doomworld.com/monthly_2024_05/image.png.27c035d005a94b6b32d7cedf3bdbcb86.png" class="imagen borde">
+					</div>
+
+					<div class="flexbox-box-article-right">
+							<div class="article_content_background"><div class="article_content">
+							<p>Este es un Community Project dirigido por iddq tea.</p>
+
+							<p>Es un megawad boom-compatible compuesto por mapas de 1 solo sector, esto quiere decir, 
+								con un solo piso y un solo techo. <br>
+							</p>
+
+							<p>Yo desarrolle (estoy desarrollando) MAP17, un mapa que es un sector scroller gigante.</p>
+
+							<p><span class="text_yellow">EL WAD SIGUE EN DESARROLLO</span>. No hay descarga disponible ahora mismo</p>
+
+							<p class="center">
+								<a href="https://urrova.github.io/404.html" class="button">(no) Descargar</a>
+							</p>
+
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/145148-1-sector-community-project/">Hilo de desarrollo en Doomworld</a>
+							</p>
+			
+						</div></div>
+							<br>
+					</div>
+				</div>
+			</article>
+
+			<article class="article_mods_negativeone">
+				<h2>Doom -1 (NEGATIVEONE)</h2>
+				<br>
+				<div class="flexbox-container">
+					<div class="flexbox-box-article-left">
+						<img src="https://static.doomworld.com/monthly_2020_10/doom12.png.5607be11c8f9f70edcc3041335d10ba6.png" class="imagen borde">
+					</div>
+
+					<div class="flexbox-box-article-right">
+							<div class="article_content_background"><div class="article_content">
+							<p>Este es un mod de doom colaborativo, compatible con boom, empezado por AtticTelephone</p>
+
+							<p>Esto fue llamado un experimento social, en el cual cualquiera podia reservar mapas, editarlos y publicarlos para que otro pudiera editarlos tambien.<br>
+							El wad fue un exito, pero salio con varios bugs, es por eso que hice un thread de doomworld para la version bugfix</p>
+
+							<h3>Informacion:</h3>
+							<ul class="greenBG">
+							<li>Modo de juego: Solo/Coop/Deathmatch</li>
+							<li>IWAD: DOOM2.wad</li>
+							<li>Motor recomendado: Boom/MBF to up.</li>
+							<li>Mapas: 35</li>
+							<li>Ajustes de dificultad: Implementados en algunos de los niveles.</li>
+							</ul>
+
+
+							<p class="center">
+								<a href="https://www.doomworld.com/idgames/levels/doom2/Ports/megawads/negativeone" class="button">Descargar desde /idgames</a>
+							</p>
+
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/115781-doom-1-a-doomworld-experiment">Hilo de desarrollo de la version original</a> | 
+								<a href="https://www.doomworld.com/forum/topic/117325-doom-1-the-final-release/">Hilo de publicacion de la version original</a>
+							</p>
+						
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/117348-doom-1-complete-the-bugfix-thread/">Hilo de desarrollo de la version bugfix</a> | 
+								<a href="https://www.doomworld.com/forum/topic/128549-doom-1-negative-one-beyond-the-experiment-release-thread/">Hilo de publicacion de la version bugfix</a>
+							</p>
+
+							</div></div>
+							<br>
+					</div>
+				</div>
 			</article>
 			
 			<div id="Footer_loader"> <p>Descargando footer</p> </div>
