commit de yo quejandome de la vida

--- a/mods.html
+++ b/mods.html
@@ -39,7 +39,7 @@
 
 			<div class="center">
 				<p>I like FPS games from the year of the fart lol.</p>
-				<p>Don't have doom? Download freedoom from <a href="https://freedoom.github.io/">this site</a> (or buy it from steam).</p>
+				<p>This can look like a doom mod showcase, in reality this is a documentary about how doom ruined my life.</p>
 				<br>
 			</div>
 
@@ -372,6 +372,10 @@
 							</p>
 
 							<p>I made (am making) MAP17, a map that is a giant scrolling sector.</p>
+
+							<p>This is my second doom error. I joined the project willing to have some fun and make something instead of real life;
+								didnt remembered i was that burned out. I did it extremely tired; i just should have stopped doing doom maps at all lol.
+							</p>
 
 							<p><span class="text_yellow">THE WAD IS STILL IN DEVELOPMENT</span>. No download available right now.</p>
 
