--- a/mods_es.html
+++ b/mods_es.html
@@ -39,7 +39,7 @@
 			
 			<div class="center">
 				<p>Me gustan los juegos FPS del año del pedo lol.</p>
-				<p>No tenes doom? Descarga freedoom desde <a href="https://freedoom.github.io/">este sitio</a> (o compralo por steam).</p>
+				<p>Esto puede parecer una pagina de mods de doom, en realidad es un documental de como doom arruino mi vida. No hagan lo mismo que yo.</p>
 				<br>
 			</div>
 
@@ -376,6 +376,10 @@
 							</p>
 
 							<p>Yo desarrolle (estoy desarrollando) MAP17, un mapa que es un sector scroller gigante.</p>
+
+							<p>Este es mi segundo error de doom. Me uni al proyecto para tener un poco de diversion y hacer otra cosa que la vida real;
+								no me acordaba que estaba tan cansado. Lo hice estando extremadamente cansado; Ya debi haber dejado de hacer mapas en ese entonces.
+							</p>
 
 							<p><span class="text_yellow">EL WAD SIGUE EN DESARROLLO</span>. No hay descarga disponible ahora mismo</p>
 
